Main: Fix Layout on Mobile

--- a/public/index/global.css
+++ b/public/index/global.css
@@ -1,10 +1,51 @@
 @import "reset.css";
-@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lora:ital,wght@0,400..700;1,400..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Rubik:ital,wght@0,300..900;1,300..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@font-face {
+    font-family: "Roboto";
+    src: url("/fonts/Roboto/Roboto-VariableFont_wght.ttf") format("truetype"),
+        url("/fonts/Roboto/Roboto-Italic-VariableFont_wght.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Roboto Mono";
+    src: url("/fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf") format("truetype"),
+        url("/fonts/Roboto_Mono/RobotoMono-Italic-VariableFont_wght.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Playfair Display";
+    src: url("/fonts/Playfair_Display/PlayfairDisplay-VariableFont_wght.ttf") format("truetype"),
+        url("/fonts/Playfair_Display/PlayfairDisplay-Italic-VariableFont_wght.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Lora";
+    src: url("/fonts/Lora/Lora-VariableFont_wght.ttf") format("truetype"),
+        url("/fonts/Lora/Lora-Italic-VariableFont_wght.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Rubik";
+    src: url("/fonts/rubik-v23-latin-regular.woff2") format("woff2"),
+        url("/fonts/rubik-v23-latin-regular.woff") format("woff");
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Inter";
+    src: url("/fonts/inter-v12-latin-regular.woff2") format("woff2"),
+        url("/fonts/inter-v12-latin-regular.woff") format("woff");
+    font-weight: 400;
+    font-style: normal;
+}
 
 :root {
     --font-monospace: "Roboto Mono", Consolas, "Courier New", Courier, monospace;
     --font-headings: "Playfair Display", "Times New Roman", Times, serif;
-    --font-serif: "EB Garamond", Times, -apple-system, serif;
+    --font-serif: Lora, Times, -apple-system, serif;
     --font-sans-serif: Rubik, Inter, Arial, -apple-system, sans-serif;
 }
 
@@ -102,7 +143,7 @@ header.global-banner {
         --color-bg-ternary: #ddd;
         --color-border: rgba(0, 0, 0, 0.5);
         --color-shadow: rgba(0, 0, 0, 0.2);
-        
+
         .light-mode-icon {
             display: block;
         }
@@ -110,7 +151,6 @@ header.global-banner {
             display: none;
         }
     }
-
 
     /* prefers-color-scheme: light, theme: dark*/
     .dark {
@@ -158,7 +198,6 @@ header.global-banner {
         background-color: var(--color-bg);
         color: var(--color-text);
     }
-    
 
     a {
         color: var(--color-text-link);
