--- a/public/web/project2-landing-page/styles.css
+++ b/public/web/project2-landing-page/styles.css
@@ -179,7 +179,7 @@ main h1 {
     color: #f9faf8;
     font-weight: bold;
     font-size: 18px;
-    font-family: roboto;
+    font-family: Roboto;
 }
 
 .action button:hover {
